[tool.poetry]
name = "python-language-server-bug-std-imports"
version = "0.1.0"
description = ""
authors = ["Iván José Martín García <ivanmartinga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
